<resources>
    <string name="app_name">taller_3_material_desing</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="titulo_agregar">AGREGAR LIBROS</string>
    <string name="isbn">Código ISBN</string>
    <string name="nombrelibro">Nombre del Libro</string>
    <string name="autorlibro">Autor del Libro</string>
    <string name="paisautor">País del Autor</string>
    <string name="numeropaginas">Número de Páginas</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_limpiar">Limpiar</string>
    <string name="mensaje_guardar">El libro ha sido guardado exitosamente</string>
    <string name="titulo_detalle">DETALLE DEL LIBRO</string>
    <string name="etiqueta_boton_eliminar">Eliminar</string>
    <string name="titulo_eliminar">Eliminar Libro</string>
    <string name="pregunta_mensaje_eliminar">¿Estás seguro que deseas eliminar este libro?</string>
    <string name="opcion_si">Si</string>
    <string name="opcion_no">No</string>
    <string name="titulo_ventana_seleccionar_foto">Por favor, seleccione la foto</string>
</resources>
