<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleLibro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTituloDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/titulo_detalle"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgFotoDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/images5" />

        <TableLayout
            android:id="@+id/tblTablaDetalle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/filaIsbn"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblTituloIsbn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isbn"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblIsbnDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/FilaNombreLibro"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblTituloNombreLibro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrelibro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblNombreLibroDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/filaAutorLibro"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblTituloAutorLibro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autorlibro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblAutorLibroDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>